--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,6 @@ model2.png
 a.out
 bin/
 data/
-lib/
-lib64
 pyvenv.cfg
 *.DSYM
 *.d
@@ -37,3 +35,10 @@ selfdrive/proclogd/proclogd
 selfdrive/ui/ui
 selfdrive/test/tests/plant/out
 /src/
+
+.pio
+.vscode
+.vscode/.browse.c_cpp.db*
+.vscode/c_cpp_properties.json
+.vscode/launch.json
+.vscode/ipch
