--- a/ESP32-Pilot/platformio.ini
+++ b/ESP32-Pilot/platformio.ini
@@ -12,3 +12,7 @@
 platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
+lib_deps =
+    janelia-arduino/Vector@^1.2.2
+    https://github.com/collin80/can_common.git
+    https://github.com/collin80/esp32_can.git
